crates/skribble_core/src/css/snapshots/skribble_core__css____tests__class_selector.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: class.to_skribble_css(runner_config)?
---
.pt\:\$0 {
  padding-top: 0px;
}

