crates/skribble_core/src/css/snapshots/skribble_core__css____tests__classes_with_atom_arguments.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: css
---
/* Generated by Skribble */
@charset "utf-8";
@layer default;
@layer default {
  .pt\:\[1px\] {
  }
  @media (min-width: 768px) {
    .md\:pt\:\[1vh\] {
    }
  }
}

