crates/skribble_core/src/css/snapshots/skribble_core__css____tests__classes_with_color_properties.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: classes.to_skribble_css(runner_config)?
---
/* Generated by Skribble */
@charset "utf-8";
@layer default;
@property --sk-opacity-s {
  syntax: "<number>";
  inherits: true;
  initial-value: 1;
}
@property --sk-s {
  syntax: "<color>";
  inherits: true;
  initial-value: hsla(314, 100%, 47.058823%, var(--sk-opacity-s));
}
@property --sk-opacity-p {
  syntax: "<number>";
  inherits: false;
  initial-value: 1;
}
@property --sk-p {
  syntax: "<color>";
  inherits: false;
  initial-value: hsla(258.89362, 94.37751%, 51.17647%, var(--sk-opacity-p));
}
@layer default {
  .bg\:\$secondary {
    --sk-opacity-s: 1;
    color: --sk-s;
  }
  @media print {
    :root {
      --sk-opacity-s: 1;
      --sk-s: hsla(240, 100%, 36.078434%, var(--sk-opacity-s));
    }
    .dark {
      --sk-opacity-s: 1;
      --sk-s: hsla(300, 100%, 50%, var(--sk-opacity-s));
    }
  }
  @media (min-width: 640px) {
    .sm\:bg\:\$primary {
      --sk-opacity-p: 1;
      color: --sk-p;
    }
  }
  @media (prefers-color-scheme: dark) {
    :root {
      --sk-opacity-s: 1;
      --sk-s: hsla(60, 100%, 96.66667%, var(--sk-opacity-s));
    }
  }
}

