crates/skribble_core/src/css/snapshots/skribble_core__css____tests__classes_with_keyframes.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: css
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, default;
@keyframes spin {
  from {
    transform: rotate(0deg);
  }
  to {
    transform: rotate(360deg);
  }
}
@layer default {
  .animate\:\$spin {
    animation-name: spin;
  }
  @media screen {
    .screen\:animate\:\$spin {
      animation-name: spin;
    }
  }
}

