crates/skribble_core/src/css/snapshots/skribble_core__css____tests__classes_with_modifier_arguments.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: css
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default;
@layer default {
  .\[padding\=1px\] {
    padding: 1px;
  }
  .aria-hidden\:\[--something\=red\] {
    --something: red;
  }
  .hover\:\[--something\=red\] {
    --something: red;
  }
  @media (min-width: 768px) {
    .md\:\[padding\=1vh\] {
      padding: 1vh;
    }
  }
}

