crates/skribble_core/src/css/snapshots/skribble_core__css____tests__css@atom_arguments.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: css
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@layer default {
  .pt\:\[1px\] {
    padding-top: 1px;
  }
  @media (min-width: 768px) {
    .md\:pt\:\[1vh\] {
      padding-top: 1vh;
    }
  }
}

