crates/skribble_core/src/css/snapshots/skribble_core__css____tests__css@colors.snap
---
source: crates/skribble_core/src/css/__tests.rs
expression: css
---
/* Generated by Skribble */
@charset "utf-8";
@layer base, alias, default, priority-class;
@property --sk-s-hue {
  syntax: "<number> | <angle>";
  inherits: true;
  initial-value: 314;
}
@property --sk-s-saturation {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 100%;
}
@property --sk-s-lightness {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 47.058823%;
}
@property --sk-s-alpha {
  syntax: "<number> | <percentage>";
  inherits: true;
  initial-value: 1;
}
@property --sk-s {
  syntax: "<color>";
  inherits: true;
  initial-value: hsl(314 100% 47.058823%);
}
@property --sk-p-hue {
  syntax: "<number> | <angle>";
  inherits: true;
  initial-value: 258.89362;
}
@property --sk-p-saturation {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 94.37751%;
}
@property --sk-p-lightness {
  syntax: "<percentage>";
  inherits: true;
  initial-value: 51.17647%;
}
@property --sk-p-alpha {
  syntax: "<number> | <percentage>";
  inherits: true;
  initial-value: 1;
}
@property --sk-p {
  syntax: "<color>";
  inherits: true;
  initial-value: hsl(258.89362 94.37751% 51.17647%);
}
@layer default {
  :root {
    --sk-p-hue: 258.89362;
    --sk-p-saturation: 94.37751%;
    --sk-p-lightness: 51.17647%;
    --sk-p-alpha: 1;
    --sk-p: hsl(258.89362 94.37751% 51.17647%);
  }
  .bg\:\$secondary {
    background-color: var(--sk-s, #f000b8);
  }
  @media print {
    :root {
      --sk-s-hue: 314;
      --sk-s-saturation: 100%;
      --sk-s-lightness: 47.058823%;
      --sk-s-alpha: 1;
      --sk-s: hsl(240 100% 36.078434%);
    }
    .dark {
      --sk-s-hue: 314;
      --sk-s-saturation: 100%;
      --sk-s-lightness: 47.058823%;
      --sk-s-alpha: 1;
      --sk-s: hsl(300 100% 50%);
    }
  }
  @media (min-width: 640px) {
    .sm\:bg\:\$primary {
      background-color: var(--sk-p, #570df8);
    }
  }
  @media (prefers-color-scheme: dark) {
    :root {
      --sk-s-hue: 314;
      --sk-s-saturation: 100%;
      --sk-s-lightness: 47.058823%;
      --sk-s-alpha: 1;
      --sk-s: hsl(60 100% 96.66667%);
    }
  }
}

